Cadastro e login pronto e biblioteca em bootstrap

--- a/Trabalho desenvolvimento rapido em python/templates/base.html
+++ b/Trabalho desenvolvimento rapido em python/templates/base.html
@@ -13,8 +13,8 @@
   </head>
   <body>
     <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Biblioteca</a>
-    </nav>
+        <a class="navbar-brand" href="{% url 'home' %}">Biblioteca</a>
+      </nav>
 
     {% block 'conteudo' %} {% endblock %}
 
