--- a/Trabalho desenvolvimento rapido em python/livro/templates/livros_emprestados.html
+++ b/Trabalho desenvolvimento rapido em python/livro/templates/livros_emprestados.html
@@ -3,24 +3,10 @@
 
 {% block 'conteudo' %} 
 
+<!--Ainda nao pronto-->
+<h1 style="text-align: center;">Todos livros emprestados(ainda nao pronto)</h1>
 <div class="container">
-    <br>
-    {% if status == '6'%}
-        <div class="alert alert-success" role="alert">
-          Livro cadastrado com sucesso
-        </div>
-
-    {% endif %}
-
-    {% if status == '7'%}
-        <div class="alert alert-success" role="alert">
-          Erro ao cadastrar livro. Tente novamente.
-        </div>
-
-    {% endif %}
-
     <div class="row">
-        
         {% for livro in livros %}
             <div class="col-md">
                 <div class="card" style="width: 20rem;">
@@ -46,13 +32,10 @@
                     </div>
                 </div>
             </div>
-        {% empty %}
-            <li>Nenhum livro cadastrado.</li>
         {% endfor %}
-    
-    
-    
+
     </div>
 </div>
+
 
 {% endblock %}
